OOzie SLA and Mapreduce configuration example

--- a/oozie/src/main/java/com/oozie/java/job.properties
+++ b/oozie/src/main/java/com/oozie/java/job.properties
@@ -16,11 +16,11 @@
 # limitations under the License.
 #
 
-nameNode=hdfs://localhost:9000
-jobTracker=localhost:8032
+nameNode=hdfs://172.31.17.211:9000
+jobTracker=172.31.17.211:8032
 queueName=default
 oozie.use.system.libpath=true
 oozie.libpath=${nameNode}/user/${user.name}/share/lib
-oozie.wf.application.path=${nameNode}/user/${user.name}/oozie/apps/java/workflow.xml
-inputDir=${nameNode}/user/${user.name}/oozie/apps/java/logs.txt
-outputDir=java
+oozie.wf.application.path=${nameNode}/user/${user.name}/oozie/apps/test/workflow.xml
+inputDir=${nameNode}/user/${user.name}/oozie/test/logs/logs.txt
+outputDir=${nameNode}/user/${user.name}/oozie/test/output
